# the-daily-auction

./: .env.template  .gitignore  Anchor.toml  Cargo.toml  README.md  docker-compose.yml
codex/: .env.template  Dockerfile  requirements.txt
codex/app/: default_index.html  html_edit.py  html_output.schema.json  security.py  server.py
codex/scripts/: edit.sh  html-edit  reset.sh
deploy/: .env.template  Dockerfile
deploy/app/: server.py
deploy/scripts/: deploy.sh  init_baseline.sh  nuke.sh  publish_preview.sh  sync_from_codex.sh
docs/: solana-auction-spec.md
editor/: app.js  index.html  style.css
jobs/auction_settlement/: auction_client.py  handler.py  requirements.txt
programs/auction/: Cargo.toml
programs/auction/src/: lib.rs
public-auction/: .env.local.example  package-lock.json  package.json
public-auction/app/: globals.css  layout.js  page.js  providers.js
scripts/: deploy-auction-lambda.sh  init-auction-config.py  init-auction-program.sh  publish-editor.sh  setup-aws.sh  setup-ec2.sh
site-template/: index.html
