[package]
name = "auction"
version = "0.1.0"
description = "Daily Auction program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "auction"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
